log
Wed Mar 25 03:14:13 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
0f85a63
Wed Mar 25 03:37:45 AM UTC 2026: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
e8b8a66
Fri Mar 27 01:52:44 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
776d732
Fri Mar 27 01:57:17 AM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
8df99e1
Fri Mar 27 02:03:17 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
55be519
Fri Mar 27 02:04:00 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
c5a0816
Fri Mar 27 02:04:15 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c:52:1: error: "/*" within comment [-Werror=comment]
   52 | /*
cc1: all warnings being treated as errors
6fd56bd
Fri Mar 27 02:04:42 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /tmp/ccJzfopD.o: in function `test_first_next':
/home/runner/workspace/test.c:101:(.text+0xb71): undefined reference to `firstList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:122:(.text+0xbd6): undefined reference to `firstList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:133:(.text+0xc19): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:151:(.text+0xc73): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:161:(.text+0xca4): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
c02c8e5
Fri Mar 27 02:05:09 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /tmp/ccIzpyp6.o: in function `test_first_next':
/home/runner/workspace/test.c:101:(.text+0xba1): undefined reference to `firstList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:122:(.text+0xc06): undefined reference to `firstList'
collect2: error: ld returned 1 exit status
a6c35e0
Fri Mar 27 02:05:32 AM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
36feb83
Fri Mar 27 02:06:32 AM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
5640d06
Fri Mar 27 02:09:31 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /tmp/ccjvn50q.o: in function `test_first_next':
/home/runner/workspace/test.c:133:(.text+0xc39): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:151:(.text+0xc93): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:161:(.text+0xcc4): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
29d1ace
Fri Mar 27 02:09:41 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
8e4accb
Fri Mar 27 02:10:42 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
2aef26f
Fri Mar 27 02:11:22 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
09e8197
Fri Mar 27 02:17:55 AM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:67:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   67 |     Nodo * aux = list->head;
      |     ^~~~
      |     Node
list.c:67:18: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   67 |     Nodo * aux = list->head;
      |                  ^~~~
list.c:68:14: error: request for member ‘next’ in something not a structure or union
   68 |     while(aux->next != NULL){
      |              ^~
list.c:69:18: error: request for member ‘next’ in something not a structure or union
   69 |         aux = aux->next;
      |                  ^~
list.c:71:24: error: request for member ‘next’ in something not a structure or union
   71 |     list->current = aux->next;
      |                        ^~
156131d
Fri Mar 27 02:18:17 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
d6bc5fd
Fri Mar 27 02:21:38 AM UTC 2026: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  6|4
total_score: 20/60
c7ad726
Fri Mar 27 02:23:16 AM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
557df1b
Fri Mar 27 02:24:13 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3d1f39e
Fri Mar 27 02:25:42 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9cfa339
Fri Mar 27 02:26:27 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
00651df
Fri Mar 27 02:27:23 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 30/60
9525949
Fri Mar 27 02:27:40 AM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
c30cc18
Fri Mar 27 02:28:03 AM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
3268baa
Fri Mar 27 02:35:17 AM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:84:20: error: too few arguments to function ‘createNode’
   84 |     Node * nuevo = createNode();
      |                    ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
4d70eec
Fri Mar 27 02:35:34 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
ae12f71
Fri Mar 27 02:36:32 AM UTC 2026: 
 tests:  9|3
total_score: 30/60
d445d79
Fri Mar 27 02:38:37 AM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a243768
Fri Mar 27 02:39:40 AM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 40/60
73861ad
Fri Mar 27 02:40:21 AM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 30/60
6b1f361
Fri Mar 27 02:40:56 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/60
4474df6
Fri Mar 27 02:49:36 AM UTC 2026: 
 tests:  10|2
total_score: 40/60
5a9ce1b
Fri Mar 27 02:57:32 AM UTC 2026: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
4a4081a
Fri Mar 27 02:58:23 AM UTC 2026: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
a5dfac9
Fri Mar 27 03:14:50 AM UTC 2026: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 50/60
1ddaee5
Fri Mar 27 05:36:02 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
55c90f3
Fri Mar 27 05:48:48 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/60
bc62b21
